--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -13,12 +13,7 @@
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
 
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
-        <TextView
-            android:layout_height="wrap_content" android:layout_width="100sp"
-            android:gravity="left"
-            android:text="গ্রাম"
-            android:textColor="#000000"
-            android:textSize="18sp"/>
+        <TextView android:layout_height="wrap_content" android:layout_width="100sp" android:gravity="left" android:text="গ্রাম" android:textColor="#000000" android:textSize="18sp"/>
 
         <Spinner
             android:id="@+id/spnVill" android:layout_column="1"
@@ -64,83 +59,21 @@
         <Button android:id="@+id/cmdHHList" android:visibility="gone"  android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
             android:layout_width="wrap_content"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="খানার তালিকা তৈরি" android:layout_weight="1" />
 
-        <Button android:id="@+id/cmdHH" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
-            android:layout_width="match_parent"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="নতুন খানা নিবন্ধন" android:layout_weight="0.50" />
+        <Button
+            android:id="@+id/cmdHH"
+            android:layout_width="match_parent"
+            android:layout_height="45sp"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="20sp"
+            android:layout_weight="0.50"
+            android:background="@drawable/button_style_blue"
+            android:text="নতুন খানা নিবন্ধন"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
     </LinearLayout>
     <View android:id="@+id/lineHHMenu" android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
 
-    <!--<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="always" android:isScrollContainer="true" android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="outsideInset" android:scrollbars="vertical">-->
-    <!--<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">-->
-
-        <!--****************** added by sakib**************-->
-        <!--<LinearLayout-->
-            <!--android:orientation="horizontal"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:textAlignment="center"-->
-            <!--android:gravity="left" android:paddingTop="5sp" android:paddingBottom="5sp"-->
-            <!--android:background="@color/tableHeading">-->
-            <!--<TextView-->
-                <!--android:text=""-->
-                <!--android:layout_width="50sp"-->
-                <!--android:layout_height="wrap_content"/>-->
-
-            <!--<TextView-->
-                <!--android:text="বাড়ির #"-->
-                <!--android:layout_width="80sp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/Bari"-->
-                <!--android:textColor="@android:color/black"/>-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/BariN"-->
-                <!--android:layout_width="250sp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="বাড়ির নাম"-->
-                <!--android:textColor="@android:color/black" />-->
-
-            <!--<TextView-->
-                <!--android:text=" খানা #"-->
-                <!--android:layout_width="80sp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/tvListHeadingNo"-->
-                <!--android:textColor="@android:color/black"/>-->
-
-            <!--<TextView-->
-                <!--android:text="খানা প্রধান"-->
-                <!--android:layout_width="250sp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/tvListHeadingName"-->
-                <!--android:textColor="@android:color/black"/>-->
-
-            <!--<TextView-->
-                <!--android:text="মোট সদস্য"-->
-                <!--android:layout_width="120sp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/tvListHeadingTotMem"-->
-                <!--android:textColor="@android:color/black"/>-->
-            <!--<TextView-->
-                <!--android:text="ফলাফল"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/tvListHeadingStatus"-->
-                <!--android:textColor="@android:color/black" />-->
-        <!--</LinearLayout>-->
-        <!--<View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />-->
-
-        <!--****************** added by sakib**************-->
-       <!--<LinearLayout android:id="@+id/secListView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">-->
-             <!--<ListView android:scrollbars="vertical"-->
-                  <!--android:id="@+id/lstData"-->
-                  <!--android:layout_width="match_parent"-->
-                  <!--android:layout_height="550sp"-->
-                  <!--android:divider="#000000"-->
-                  <!--android:dividerHeight="1px"-->
-                  <!--android:clickable="true">-->
-              <!--</ListView>-->
-       <!--</LinearLayout>-->
-
-        <HorizontalScrollView
+          <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
