--- a/app/src/main/res/layout/eventlistpopup.xml
+++ b/app/src/main/res/layout/eventlistpopup.xml
@@ -9,7 +9,7 @@
 	        android:layout_height="wrap_content"
 	        android:orientation="horizontal">
 	        
-	        <TextView android:text="Event List:" android:layout_width="250sp" android:layout_height="wrap_content" android:textSize="20sp" />
+	        <TextView android:text="ঘটনার তালিকা:" android:layout_width="250sp" android:layout_height="wrap_content" android:textSize="20sp" />
 					<RadioGroup
 				        android:id="@+id/roEventList" android:layout_gravity="right"
 				        android:layout_width="wrap_content"
@@ -19,15 +19,15 @@
 				            android:id="@+id/roCurrentEvent"
 				            android:layout_width="wrap_content"
 				            android:layout_height="wrap_content"
-				            android:text="Current Events" 
+				            android:text="বর্তমান ঘটনা"
 				            android:checked="true" />
 				 
 				        <RadioButton
 				            android:id="@+id/roAllEvent"
 				            android:layout_width="wrap_content"
 				            android:layout_height="wrap_content"
-				            android:text="Old Events" />				 
-				    </RadioGroup>	        
+				            android:text="পু্রাতন ঘটনা" />
+				    </RadioGroup>
 	    </LinearLayout>
 	    <LinearLayout	        
 	        android:layout_width="fill_parent"
