--- a/app/src/main/res/layout/eventlistrow.xml
+++ b/app/src/main/res/layout/eventlistrow.xml
@@ -19,8 +19,8 @@
 					        android:layout_height="wrap_content"
 					        android:text="edit"/>
 										    
-				    <TextView android:id="@+id/e_MSlNo" android:layout_column="2"
-				        android:text="SNo"				
+				    <TextView android:id="@+id/e_MslNo" android:layout_column="2"
+				        android:text="MSlNo"
 						android:textSize="18sp" android:gravity="center"
 						android:layout_width="60sp"
 						android:layout_height="30sp"/>
