--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -54,10 +54,10 @@
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
 
 
-    <LinearLayout android:id="@+id/secHHMenu" android:layout_weight="3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
+    <LinearLayout android:id="@+id/secHHMenu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
 
         <Button android:id="@+id/cmdHHList" android:visibility="gone"  android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
-            android:layout_width="wrap_content"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="খানার তালিকা তৈরি" android:layout_weight="1" />
+            android:layout_width="wrap_content"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="খানার তালিকা তৈরি"/>
 
         <Button
             android:id="@+id/cmdHH"
@@ -65,7 +65,6 @@
             android:layout_height="45sp"
             android:layout_marginLeft="20sp"
             android:layout_marginRight="20sp"
-            android:layout_weight="0.50"
             android:background="@drawable/button_style_blue"
             android:text="নতুন খানা নিবন্ধন"
             android:textColor="#ffffff"
@@ -91,8 +90,7 @@
                 <include
                     layout="@layout/householdheading"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_height="wrap_content"/>
 
                 <View
                     android:layout_width="fill_parent"
