--- a/app/src/main/res/layout/member_name.xml
+++ b/app/src/main/res/layout/member_name.xml
@@ -4,16 +4,15 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:scrollbars="vertical">
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
+
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:visibility="gone" android:orientation="horizontal" android:background="@color/pageHeadingBack">
         <ImageButton android:id="@+id/cmdBack" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent"/>
-        <TextView android:id="@+id/lblHeading" android:text="সদস্যের নাম"  android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
+        <TextView android:id="@+id/lblHeading" android:text="সদস্যের নাম"  android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading" android:visibility="gone"/>
     </LinearLayout>
-    <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:gravity="center" android:background="#ffffff">
-        <ImageView android:layout_marginLeft="20sp"
-            android:layout_width="40sp"
-            android:layout_height="40sp" android:src="@drawable/member" />
-        <TextView  android:text="  সদস্যের নামের তালিকা তৈরি"  android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal" android:textSize="25sp" android:textColor="#006699"/>
+    <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" android:visibility="gone"/>
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:visibility="gone" android:orientation="horizontal" android:gravity="center" android:background="#ffffff">
+        <ImageView android:layout_marginLeft="20sp" android:layout_width="40sp" android:layout_height="40sp" android:src="@drawable/member" />
+        <TextView  android:text="  সদস্যের নামের তালিকা তৈরি"  android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal" android:textSize="25sp" android:textColor="#006699" android:visibility="gone"/>
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
 
@@ -26,15 +25,11 @@
         android:scrollbarStyle="outsideInset"
         android:scrollbars="vertical">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10sp"
-            android:orientation="vertical">
+        <LinearLayout android:layout_width="fill_parent"  android:layout_height="wrap_content" android:layout_marginLeft="10sp" android:orientation="vertical">
 
-            <LinearLayout android:id="@+id/secVill" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
+            <LinearLayout android:id="@+id/secVill" android:layout_width="fill_parent" android:visibility="gone" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
                 <!--<TextView android:id="@+id/lblVill" android:text="" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp" />-->
-                <TextView android:id="@+id/VlblVill" android:text="খানা নম্বর" android:layout_width="155sp" android:layout_height="wrap_content" android:textSize="20sp" />
+                <TextView android:id="@+id/VlblVill" android:text="খানা নম্বর" android:layout_width="155sp" android:layout_height="wrap_content" android:textSize="20sp" android:visibility="gone"/>
                 <EditText android:id="@+id/txtVill" android:maxLength="3" android:layout_width="80sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
                 <EditText android:id="@+id/txtBari" android:maxLength="4" android:layout_width="80sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
                 <EditText android:id="@+id/txtHH" android:maxLength="2" android:layout_width="80sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
@@ -43,6 +38,7 @@
             <LinearLayout
                 android:id="@+id/secMSlNo"
                 style="@style/rowStyle0"
+                android:visibility="gone"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -52,7 +48,8 @@
                     android:layout_width="155sp"
                     android:layout_height="wrap_content"
                     android:text="সদস্যের সিরিয়াল"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:visibility="gone"/>
 
                 <EditText
                     android:id="@+id/txtMSlNo"
@@ -62,14 +59,16 @@
                     android:layout_marginRight="10sp"
                     android:inputType="number"
                     android:maxLength="2"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:visibility="gone"/>
             </LinearLayout>
 
             <View
                 android:id="@+id/lineMSlNo"
                 android:layout_width="fill_parent"
                 android:layout_height="1dip"
-                android:background="#CCCCCC" />
+                android:background="#CCCCCC"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:id="@+id/secName"
@@ -79,8 +78,14 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/lbl1"
+                    android:layout_width="40sp"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp" />
+
+                <TextView
                     android:id="@+id/VlblName"
-                    android:layout_width="155sp"
+                    android:layout_width="190sp"
                     android:layout_height="wrap_content"
                     android:text="সদস্যের নাম"
                     android:textSize="20sp" />
@@ -88,7 +93,7 @@
                 <EditText
                     android:id="@+id/txtName"
                     style="@style/customEdit"
-                    android:layout_width="250sp"
+                    android:layout_width="300sp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="0sp"
                     android:gravity="top|left"
@@ -100,6 +105,7 @@
 
             <LinearLayout
                 style="@style/rowStyle0"
+                android:visibility="gone"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -110,7 +116,8 @@
                     android:text="খানার সদস্যদের নাম (খানা প্রধানের নাম দিয়ে শুরু করুন)"
                     android:textColor="@android:color/holo_blue_dark"
                     android:textSize="20sp"
-                    android:id="@+id/txtNameHint"/>
+                    android:id="@+id/txtNameHint"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
@@ -118,12 +125,14 @@
                 android:id="@+id/lineH222"
                 android:layout_width="fill_parent"
                 android:layout_height="1dip"
-                android:background="#CCCCCC" />
+                android:background="#CCCCCC"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:paddingTop="20sp">
 
                 <Button
@@ -142,6 +151,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:layout_marginBottom="5sp"
-        android:background="#CCCCCC" />
+        android:background="#CCCCCC"
+        android:visibility="gone"/>
 
 </LinearLayout>
