--- a/app/src/main/res/layout/events_newmem.xml
+++ b/app/src/main/res/layout/events_newmem.xml
@@ -590,7 +590,13 @@
                     android:minHeight="40sp"
                     android:textSize="20sp" />
             </LinearLayout>
-
+            <LinearLayout android:layout_width="fill_parent" android:background="#006699" android:visibility="gone" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
+                <TextView android:text="" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp"  />
+                <TextView android:text="" android:textColor="#FFFFFF" android:layout_width="300sp" android:layout_height="wrap_content" android:textSize="20sp" />
+                <CheckBox android:id="@+id/chkNeedReview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:text="" android:background="#FFFFFF" />
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -598,7 +604,7 @@
                 android:paddingTop="20sp">
 
                 <Button
-                    android:id="@+id/cmdSave"
+                    android:id="@+id/cmdSave1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10sp"
